feat(case): Case,Instace

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # DATABASE
 DB_HOST=localhost
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=root
-DB_DATABASE=auth
+DB_USERNAME=sview
+DB_PASSWORD=sview0311
+DB_DATABASE=sview
 
 # JWT
 JWT_SECRET=secret
