--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/typeorm": "^10.0.1",
     "bcryptjs": "^2.4.3",
     "joi": "^17.12.0",
+    "lodash": "^4.17.21",
     "mysql2": "^3.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
